// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include dynamic folders on the one hand and fixed ones at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 1049.9090833947007,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 1049.9090833947007,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 290.7031779482708,
      "y": 4,
      "z": -84.63931936533464,
    },
    "isLeaf": false,
    "length": 577.4499958670854,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "src",
    "outgoingEdgePoint": Vector3 {
      "x": 290.7031779482708,
      "y": 4,
      "z": 204.08567856820804,
    },
    "path": "/root/src",
    "visible": true,
    "width": 367.4681791881452,
    "x0": 356.9690883541982,
    "y0": 20.998181667894013,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 210.4791757271156,
      "y": 6,
      "z": -81.5256184072278,
    },
    "isLeaf": false,
    "length": 564.9951920346581,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "main",
    "outgoingEdgePoint": Vector3 {
      "x": 210.4791757271156,
      "y": 6,
      "z": 200.97197761010128,
    },
    "path": "/root/src/main",
    "visible": true,
    "width": 199.09439048883564,
    "x0": 360.9319804826978,
    "y0": 27.225583584107678,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 378.0014338864171,
      "y": 6,
      "z": -81.5256184072278,
    },
    "isLeaf": false,
    "length": 564.9951920346581,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "test",
    "outgoingEdgePoint": Vector3 {
      "x": 378.0014338864171,
      "y": 6,
      "z": 200.97197761010128,
    },
    "path": "/root/src/test",
    "visible": true,
    "width": 128.0243415727682,
    "x0": 563.989263100033,
    "y0": 27.225583584107678,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 200.75207686625293,
      "y": 506,
      "z": -148.25789121392654,
    },
    "isLeaf": true,
    "length": 273.1564931430085,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file1.java",
    "outgoingEdgePoint": Vector3 {
      "x": 200.75207686625293,
      "y": 506,
      "z": -11.67964464242226,
    },
    "path": "/root/src/main/file1.java",
    "visible": true,
    "width": 171.71440851011096,
    "x0": 364.89487261119746,
    "y0": 33.45298550032135,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 200.75207686625293,
      "y": 506,
      "z": 131.12600384529566,
    },
    "isLeaf": true,
    "length": 273.1564931430085,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file2.java",
    "outgoingEdgePoint": Vector3 {
      "x": 200.75207686625293,
      "y": 506,
      "z": 267.70425041679994,
    },
    "path": "/root/src/main/file2.java",
    "visible": true,
    "width": 171.71440851011096,
    "x0": 364.89487261119746,
    "y0": 312.83688055954354,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 65,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 368.2743350255544,
      "y": 506,
      "z": -78.41191744912098,
    },
    "isLeaf": true,
    "length": 552.5403882022307,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "otherFile.java",
    "outgoingEdgePoint": Vector3 {
      "x": 368.2743350255544,
      "y": 506,
      "z": 197.8582766519944,
    },
    "path": "/root/src/test/otherFile.java",
    "visible": true,
    "width": 100.64435959404375,
    "x0": 567.9521552285325,
    "y0": 33.45298550032135,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 91.2204521032777,
      "y": 4,
      "z": 537.4318125460254,
    },
    "isLeaf": false,
    "length": 314.9727250184102,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "resources",
    "outgoingEdgePoint": Vector3 {
      "x": 353.69772295195287,
      "y": 4,
      "z": 537.4318125460254,
    },
    "path": "/root/resources",
    "visible": true,
    "width": 524.9545416973502,
    "x0": 209.98181667894013,
    "y0": 629.9454500368204,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -3.271365402245351,
      "y": 6,
      "z": 417.7421770390296,
    },
    "isLeaf": false,
    "length": 62.99454500368199,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "textFiles",
    "outgoingEdgePoint": Vector3 {
      "x": 49.22408876748966,
      "y": 6,
      "z": 417.7421770390296,
    },
    "path": "/root/resources/textFiles",
    "visible": true,
    "width": 104.99090833947002,
    "x0": 220.48090751288714,
    "y0": 636.2449045371886,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -3.793419642607361,
      "y": 506,
      "z": 417.74217703902957,
    },
    "isLeaf": true,
    "length": 59.65339786536515,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "file.txt",
    "outgoingEdgePoint": Vector3 {
      "x": 42.089347482542266,
      "y": 506,
      "z": 417.74217703902957,
    },
    "path": "/root/resources/textFiles/file.txt",
    "visible": true,
    "width": 91.76553425029925,
    "x0": 223.26519679481783,
    "y0": 637.915478106347,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 295.95272336524425,
      "y": 6,
      "z": 619.3247210508121,
    },
    "isLeaf": false,
    "length": 151.1869080088369,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "tables",
    "outgoingEdgePoint": Vector3 {
      "x": 421.94181337260835,
      "y": 6,
      "z": 619.3247210508121,
    },
    "path": "/root/resources/tables",
    "visible": true,
    "width": 251.9781800147282,
    "x0": 482.9581783615622,
    "y0": 793.7312670463937,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 264.655857687381,
      "y": 506,
      "z": 561.35103501052,
    },
    "isLeaf": true,
    "length": 55.08782777501199,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table1.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 264.655857687381,
      "y": 506,
      "z": 588.894948898026,
    },
    "path": "/root/resources/tables/table1.xlsx",
    "visible": true,
    "width": 50.56932191705971,
    "x0": 489.37119672885115,
    "y0": 797.579078066767,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 321.63819797172965,
      "y": 506,
      "z": 561.35103501052,
    },
    "isLeaf": true,
    "length": 55.08782777501199,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table2.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 321.63819797172965,
      "y": 506,
      "z": 588.894948898026,
    },
    "path": "/root/resources/tables/table2.xlsx",
    "visible": true,
    "width": 50.56932191705971,
    "x0": 546.3535370131998,
    "y0": 797.579078066767,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 378.62053825607836,
      "y": 506,
      "z": 561.35103501052,
    },
    "isLeaf": true,
    "length": 55.08782777501199,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table3.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 378.62053825607836,
      "y": 506,
      "z": 588.894948898026,
    },
    "path": "/root/resources/tables/table3.xlsx",
    "visible": true,
    "width": 50.5693219170596,
    "x0": 603.3358772975486,
    "y0": 797.579078066767,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 435.60287854042696,
      "y": 506,
      "z": 561.35103501052,
    },
    "isLeaf": true,
    "length": 55.08782777501199,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table4.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 435.60287854042696,
      "y": 506,
      "z": 588.894948898026,
    },
    "path": "/root/resources/tables/table4.xlsx",
    "visible": true,
    "width": 50.56932191705971,
    "x0": 660.3182175818971,
    "y0": 797.579078066767,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 266.25911227920324,
      "y": 506,
      "z": 619.3247210508121,
    },
    "isLeaf": true,
    "length": 25.620008377319323,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table5.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 320.03494337990753,
      "y": 506,
      "z": 619.3247210508121,
    },
    "path": "/root/resources/tables/table5.xlsx",
    "visible": true,
    "width": 107.55166220140848,
    "x0": 489.37119672885115,
    "y0": 856.5147168621525,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 266.25911227920324,
      "y": 506,
      "z": 648.7925404485048,
    },
    "isLeaf": true,
    "length": 25.620008377319436,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table6.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 320.03494337990753,
      "y": 506,
      "z": 648.7925404485048,
    },
    "path": "/root/resources/tables/table6.xlsx",
    "visible": true,
    "width": 107.55166220140848,
    "x0": 489.37119672885115,
    "y0": 885.9825362598451,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 266.25911227920324,
      "y": 506,
      "z": 678.2603598461975,
    },
    "isLeaf": true,
    "length": 25.620008377319436,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table7.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 320.03494337990753,
      "y": 506,
      "z": 678.2603598461975,
    },
    "path": "/root/resources/tables/table7.xlsx",
    "visible": true,
    "width": 107.55166220140848,
    "x0": 489.37119672885115,
    "y0": 915.4503556575378,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 378.62053825607836,
      "y": 506,
      "z": 620.2866738059055,
    },
    "isLeaf": true,
    "length": 55.0878277750121,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table8.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 378.62053825607836,
      "y": 506,
      "z": 647.8305876934115,
    },
    "path": "/root/resources/tables/table8.xlsx",
    "visible": true,
    "width": 50.5693219170596,
    "x0": 603.3358772975486,
    "y0": 856.5147168621525,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 435.60287854042707,
      "y": 506,
      "z": 620.2866738059055,
    },
    "isLeaf": true,
    "length": 55.0878277750121,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table9.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 435.60287854042707,
      "y": 506,
      "z": 647.8305876934115,
    },
    "path": "/root/resources/tables/table9.xlsx",
    "visible": true,
    "width": 50.56932191705971,
    "x0": 660.3182175818972,
    "y0": 856.5147168621525,
    "z0": 6,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 380.22379284790065,
      "y": 506,
      "z": 678.2603598461975,
    },
    "isLeaf": true,
    "length": 25.620008377319436,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table10.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 433.99962394860484,
      "y": 506,
      "z": 678.2603598461975,
    },
    "path": "/root/resources/tables/table10.xlsx",
    "visible": true,
    "width": 107.55166220140836,
    "x0": 603.3358772975486,
    "y0": 915.4503556575378,
    "z0": 6,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include fixed folders on the one hand and a file at the other 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 839.4112549695428,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 839.4112549695428,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 1.82337649086287,
      "y": 4,
      "z": -40.14718625761431,
    },
    "isLeaf": false,
    "length": 503.6467529817257,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 1.82337649086287,
      "y": 4,
      "z": 211.67619023324852,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 335.7645019878172,
    "x0": 83.94112549695429,
    "y0": 83.94112549695429,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -65.32952390670056,
      "y": 6,
      "z": 10.217489040558263,
    },
    "isLeaf": false,
    "length": 251.8233764908628,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 68.9762768884263,
      "y": 6,
      "z": 10.217489040558263,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 268.6116015902537,
    "x0": 117.517575695736,
    "y0": 134.30580079512686,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -7.971300694196103,
      "y": 506,
      "z": -49.399260587250964,
    },
    "isLeaf": true,
    "length": 238.4669985112369,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -7.971300694196103,
      "y": 506,
      "z": 69.8342386683675,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 234.77544404186818,
    "x0": 124.6409772848698,
    "y0": 140.9839897849398,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 119.34095218659886,
      "y": 6,
      "z": 199.08502140870542,
    },
    "isLeaf": false,
    "length": 50.364675298172585,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 119.34095218659886,
      "y": 6,
      "z": 224.26735905779168,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 33.57645019878174,
    "x0": 352.552727087208,
    "y0": 436.49385258416225,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 118.1166175384665,
      "y": 506,
      "z": 199.75284030768668,
    },
    "isLeaf": true,
    "length": 47.69339970224735,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 118.1166175384665,
      "y": 506,
      "z": 223.59954015881036,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 29.3469305052335,
    "x0": 353.44315228584975,
    "y0": 437.82949038212485,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -61.13246763185286,
      "y": 4,
      "z": 463.49956672411145,
    },
    "isLeaf": false,
    "length": 83.94112549695433,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 148.7203461105329,
      "y": 4,
      "z": 463.49956672411145,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 419.70562748477147,
    "x0": 83.94112549695429,
    "y0": 671.5290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -62.261382947860895,
      "y": 502,
      "z": 463.49956672411145,
    },
    "isLeaf": true,
    "length": 81.53277282280374,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": 133.29183679175617,
      "y": 502,
      "z": 463.49956672411145,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 391.1064394792341,
    "x0": 89.96200718233057,
    "y0": 672.7331803127096,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 839.4112549695428,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 839.4112549695428,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 1.82337649086287,
      "y": 4,
      "z": -40.14718625761431,
    },
    "isLeaf": false,
    "length": 503.6467529817257,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 1.82337649086287,
      "y": 4,
      "z": 211.67619023324852,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 335.7645019878172,
    "x0": 83.94112549695429,
    "y0": 83.94112549695429,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -65.32952390670056,
      "y": 6,
      "z": 10.217489040558263,
    },
    "isLeaf": false,
    "length": 251.8233764908628,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 68.9762768884263,
      "y": 6,
      "z": 10.217489040558263,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 268.6116015902537,
    "x0": 117.517575695736,
    "y0": 134.30580079512686,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -7.971300694196103,
      "y": 506,
      "z": -49.399260587250964,
    },
    "isLeaf": true,
    "length": 238.4669985112369,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -7.971300694196103,
      "y": 506,
      "z": 69.8342386683675,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 234.77544404186818,
    "x0": 124.6409772848698,
    "y0": 140.9839897849398,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 119.34095218659886,
      "y": 6,
      "z": 199.08502140870542,
    },
    "isLeaf": false,
    "length": 50.364675298172585,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 119.34095218659886,
      "y": 6,
      "z": 224.26735905779168,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 33.57645019878174,
    "x0": 352.552727087208,
    "y0": 436.49385258416225,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 118.1166175384665,
      "y": 506,
      "z": 199.75284030768668,
    },
    "isLeaf": true,
    "length": 47.69339970224735,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 118.1166175384665,
      "y": 506,
      "z": 223.59954015881036,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 29.3469305052335,
    "x0": 353.44315228584975,
    "y0": 437.82949038212485,
    "z0": 6,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -61.13246763185286,
      "y": 4,
      "z": 463.49956672411145,
    },
    "isLeaf": false,
    "length": 83.94112549695433,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 148.7203461105329,
      "y": 4,
      "z": 463.49956672411145,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 419.70562748477147,
    "x0": 83.94112549695429,
    "y0": 671.5290039756343,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -62.261382947860895,
      "y": 502,
      "z": 463.49956672411145,
    },
    "isLeaf": true,
    "length": 81.53277282280374,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": 133.29183679175617,
      "y": 502,
      "z": 463.49956672411145,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 391.1064394792341,
    "x0": 89.96200718233057,
    "y0": 672.7331803127096,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 201.5,
      "y": 2,
      "z": -24.25,
    },
    "isLeaf": false,
    "length": 903,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 201.5,
      "y": 2,
      "z": 427.25,
    },
    "path": "/root",
    "visible": true,
    "width": 903,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 168.5,
      "y": 4,
      "z": -12.25,
    },
    "isLeaf": true,
    "length": 855,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 168.5,
      "y": 4,
      "z": 415.25,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 789,
    "x0": 24,
    "y0": 24,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -28.75,
      "y": 502,
      "z": 641,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 365.75,
      "y": 502,
      "z": 641,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 789,
    "x0": 24,
    "y0": 891,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
Array [
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 222,
      "y": 2,
      "z": -14,
    },
    "isLeaf": false,
    "length": 944,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 222,
      "y": 2,
      "z": 458,
    },
    "path": "/root",
    "visible": true,
    "width": 944,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  Object {
    "attributes": Object {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -70.37014134275617,
      "y": 4,
      "z": -6.000000000000028,
    },
    "isLeaf": true,
    "length": 911.9999999999999,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -70.37014134275617,
      "y": 4,
      "z": 449.9999999999999,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 327.25971731448766,
    "x0": 16,
    "y0": 16,
    "z0": 2,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "fitForFolderLabel": true,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 356.62985865724386,
      "y": 4,
      "z": -6.000000000000028,
    },
    "isLeaf": false,
    "length": 911.9999999999999,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 356.62985865724386,
      "y": 4,
      "z": 449.9999999999999,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 494.74028268551234,
    "x0": 359.25971731448766,
    "y0": 16,
    "z0": 2,
  },
  Object {
    "attributes": Object {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 228.69478798586573,
      "y": 6,
      "z": -91.66617429837521,
    },
    "isLeaf": true,
    "length": 252.66765140324958,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 435.56492932862193,
      "y": 6,
      "z": -91.66617429837521,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 413.74028268551234,
    "x0": 375.25971731448766,
    "y0": 32,
    "z0": 4,
  },
  Object {
    "attributes": Object {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#6caf3e",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 332.12985865724386,
      "y": 6,
      "z": 203.50073855243716,
    },
    "isLeaf": true,
    "length": 611.3323485967503,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 332.12985865724386,
      "y": 6,
      "z": 509.1669128508123,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 413.74028268551234,
    "x0": 375.25971731448766,
    "y0": 300.6676514032496,
    "z0": 4,
  },
  Object {
    "attributes": Object {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "fitForFolderLabel": false,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 228.69478798586573,
      "y": 504,
      "z": 669.9999999999999,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": 435.56492932862193,
      "y": 504,
      "z": 669.9999999999999,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 413.74028268551234,
    "x0": 375.25971731448766,
    "y0": 919.9999999999999,
    "z0": 4,
  },
]
`;
